--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full">
+<div class="w-full mt-5">
   <h1 class="font-bold text-4xl">Editing article</h1>
 
   <%= render "form", article: @article %>
