Fix Sidekiq.redis(&:info) throwing error when redis is not running

--- a/app/views/home/_debug_info.html.erb
+++ b/app/views/home/_debug_info.html.erb
@@ -1,7 +1,7 @@
 <div class="mt-5">
 <h3 class="text-3xl">Debug info</h3><br>
 <h4>Kamal version: <%= kamal_version %></h4><br>
-<h4>You are connected to hostname: <%= server_hostname %>, IP: <%= ip_address %></h4><br>
+<h4>You are connected to hostname: <%= server_hostname %></h4><br>
 
 <h4 class="text-2xl">Rails::Info</h4>
 <div id="rails_info">
